--- a/java/activemq/inbox-producer/.classpath
+++ b/java/activemq/inbox-producer/.classpath
@@ -33,5 +33,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="/inbox-commons"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
