--- a/node/npm_yarn_benchmark/package.json
+++ b/node/npm_yarn_benchmark/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./benchmark_npm_yarn.js"
   },
   "author": "Marcelo Cure",
   "license": "ISC",
