--- a/node/test-rethinkdb/.gitignore
+++ b/node/test-rethinkdb/.gitignore
@@ -61,5 +61,7 @@ typings/
 # dotenv environment variables file
 .env
 
+# build result directory
+build/
 
 # End of https://www.gitignore.io/api/node
